--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+!**/node_modules/
+!**/.idea/
+!**/dist/
+.mvn
+
 ### STS ###
 .apt_generated
 .classpath
